# dassflow2d-py

./: README.md  dassflow2d.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
docs/demo/: bc.txt  config.yml  dof_init.txt  hydrographs.txt  ratcurve.txt
docs/markdown/: architecture.md  todo.md
scripts/: install.py  install2venv.sh  lcomedit.py  venvinstall.sh
src/main/py/fr/dasshydro/dassflow2d_py/: ShallowWaterModel.py  example.py  run_shallow_water_model.py
src/main/py/fr/dasshydro/dassflow2d_py/boundary/: BoundaryCondition.py  Discharge1.py  DynamicBoundaryCondition.py  RatingCurve.py  Wall.py
src/main/py/fr/dasshydro/dassflow2d_py/d2dtime/: TimeStepState.py  delta.py
src/main/py/fr/dasshydro/dassflow2d_py/input/: BathymetryReader.py  CellBathymetryDict.py  Configuration.py  DassflowMeshReader.py  InitialStateReader.py  MeshReader.py  file_reading.py
src/main/py/fr/dasshydro/dassflow2d_py/mesh/: BoundaryBehavior.py  Cell.py  Edge.py  IncompleteMesh.py  Mesh.py  MeshImpl.py  Node.py  UncompleteMesh.py
src/main/py/fr/dasshydro/dassflow2d_py/output/: ResultWriter.py
src/main/py/fr/dasshydro/dassflow2d_py/resolution/: EulerHLLC.py  EulerTimeStep.py  (+1 more)
src/output/: ResultWriter.py
src/test/py/fr/dasshydro/dassflow2d_py/: ExampleTest.py  example_test.py
src/test/resources/boundary/: hydrographs.txt  rating_curves.txt
src/test/resources/input/: dof_init1.orcl  dof_init1.txt  dof_init2.orcl  dof_init2.txt  test_config.yml
src/test/resources/mesh/: mesh1.geo  mesh1.orcl
src/test/resources/output/: file
(+9 files in other folders)
